2022-01-29  Markus Gans  <guru.mail@muenster.de>
	* Minor bug fix for resizing dialogs
	* FTextView::FTextHighlight has received new constructors without 
	  length information. That allows to highlight text up to the end 
	  of the line

2022-01-21  Markus Gans  <guru.mail@muenster.de>
	* The trailing whitespaces in a FTextView line are now printed 
	  in the line buffer. This allows you to make text highlighting 
	  to the end of the line

2022-01-16  Markus Gans  <guru.mail@muenster.de>
	* Added examples/highlight-text to demonstrate text highlighting 
	  in FTextView

2022-01-15  Markus Gans  <guru.mail@muenster.de>
	* Add text highlighting for FTextView. 
	  Thanks to Michael Lehn for the idea

2022-01-12  Markus Gans  <guru.mail@muenster.de>
	* Dropdown menus are closed again on click outside the widget 
	  if there is no widget at that position 
	  (Broken since Nov 1, 2020)

2022-01-11  Markus Gans  <guru.mail@muenster.de>
	* Generalize the passing of the resize event to its parent dialog

2022-01-09  Markus Gans  <guru.mail@muenster.de>
	* Added a ring buffer to buffer unprocessed keyboard and mouse input
	* Added a unit test for the FVTerm class
	* The current mouse event is now cached in a shared_ptr

2022-01-05  Markus Gans  <guru.mail@muenster.de>
	* Sharing keyboard buffer length in FKeyboard and FMouse

2022-01-02  Markus Gans  <guru.mail@muenster.de>
	* Speed up UTF-8 input parsing

2022-01-02  Markus Gans  <guru.mail@muenster.de>
	* FTermArea now checks if there is a given terminal position 
	  in its area

2021-12-30  Markus Gans  <guru.mail@muenster.de>
	* Resetting the terminal state on resizing

2021-12-27  Markus Gans  <guru.mail@muenster.de>
	* The number of cycles has been reduced to save CPU time

2021-12-18  Markus Gans  <guru.mail@muenster.de>
	* Move the border label methods from FButtonGroup to FScrollView

2021-12-13  Markus Gans  <guru.mail@muenster.de>
	* Faster string comparison between FString, char* std::string, 